# RDMA-KV-store

./: .gitignore  CMakeLists.txt  README.md  check_kv.py  test_client.py
src/: common.c  common.h  rdma_common.c  rdma_common.h
src/Graphing/: latency_avg.py  latency_box.py  latency_cdf.py  throughput.py  util.py
src/benchmarking/: analyze.py  benchmark.c  benchmark.h  instance.c  instance.h  latency.py  latency_avg.py  latency_box.py  latency_cdf.py  operation.h  throughput.py  util.py
src/client/: client.c  client.h  rc_client_utils.c  rc_client_utils.h  run_client.c  tcp_client_utils.c  tcp_client_utils.h  uc_client_utils.c  uc_client_utils.h  ud_client_utils.c  ud_client_utils.h
src/server/: hash.c  hash.h  kvstore.c  kvstore.h  parser.c  parser.h  rc_server_utils.c  rc_server_utils.h  rdma_common.c  rdma_common.h  request_dispatcher.c  request_dispatcher.h  server_utils.c  server_utils.h  tcp_server_utils.c  tcp_server_utils.h  uc_server_utils.c  uc_server_utils.h  ud_server_utils.c  ud_server_utils.h
write_up/: thesis.tex  vmargin.sty
write_up/0_frontmatter/: abstract.tex
write_up/1_introduction/: introduction.tex
write_up/2_background/: background.tex
write_up/3_design/: design.tex
write_up/4_evaluation/: evaluation.tex
write_up/4_implementation/: implementation.tex
write_up/5_evaluation/: evaluation.tex
write_up/5_related_work/: relatedwork.tex
write_up/6_Future_improvements/: futureimprovements.tex
write_up/6_related_work/: relatedwork.tex
write_up/7_conclusion/: conclusion.tex
write_up/7_lessons_learned/: lessonslearned.tex
write_up/7_references/: references.bib
write_up/8_references/: references.bib  thesis.bib
write_up/9_appendix/: appendix.tex
write_up/Latex/Classes/: PhDthesisPSnPDF.cls
write_up/src/: VU-CS-BSc-thesis-template.tex  main.bib
